--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,16 +8,6 @@
     tools:context=".MainActivity">
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="33dp"
-        android:layout_height="33dp"
-        android:layout_marginStart="88dp"
-        android:contentDescription="icons"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="?android:attr/listChoiceIndicatorSingle"
-        tools:layout_editor_absoluteY="265dp" />
-
-    <ImageView
         android:id="@+id/avatar"
         android:layout_width="@dimen/posts_avatar_size"
         android:layout_height="@dimen/posts_avatar_size"
@@ -79,39 +69,44 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/common_spacing"
+        android:layout_marginBottom="@dimen/common_spacing"
         android:autoLink="web"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/barrier"
         tools:text="@sample/posts.json/data/content" />
 
-    <TextView
-        android:id="@+id/textView"
+    <androidx.constraintlayout.widget.Barrier
+        android:id="@+id/main"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="10"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.857"
-        tools:layout_editor_absoluteX="41dp" />
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="33dp"
-        android:layout_height="33dp"
-        android:contentDescription="icons"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="?android:attr/listChoiceIndicatorSingle"
-        tools:layout_editor_absoluteY="264dp" />
+        app:barrierDirection="bottom"
+        app:constraint_referenced_ids="content"
+        app:layout_constraintTop_toBottomOf="@id/content" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/likes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="10"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.928"
-        tools:layout_editor_absoluteX="130dp" />
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="265dp"
+        tools:text="@sample/posts.json/data/likes" />
+
+    <TextView
+        android:id="@+id/shared"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:layout_editor_absoluteX="32dp"
+        tools:layout_editor_absoluteY="265dp"
+        tools:text="@sample/posts.json/data/shared" />
+
+    <TextView
+        android:id="@+id/views"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:layout_editor_absoluteX="355dp"
+        tools:layout_editor_absoluteY="265dp"
+        tools:text="@sample/posts.json/data/views" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
